# MyTodo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  q  tasks.json
.specify/memory/: constitution.md
history/prompts/add-task/: 2-create-add-task-spec.spec.prompt.md  3-implement-add-task.red.prompt.md
history/prompts/constitution/: 1-create-todo-app-constitution.constitution.prompt.md
history/prompts/feature-editor/: 8-fix-main-and-feature-editor.general.prompt.md
history/prompts/feature-summary/: 7-add-feature-summary-script.general.prompt.md
history/prompts/general/: 4-create-update-task-spec-and-plan.spec.prompt.md  5-complete-all-core-features.spec.prompt.md  6-project-completion.general.prompt.md
specs-history/: 001-add-task-feature.spec.md  002-update-task-feature.spec.md  003-delete-task-feature.spec.md  004-mark-complete-feature.spec.md  plan-phase1-todo-app.md  spec_007_feature_editor.md
src/: feature_summary.py  main.py  main_menu.py  task_manager.py  todo.py
src/models/: task.py
